Bug #36341-Alignment issue in zephyr

--- a/app/src/pages/integration/styles/MappedLabel.scss
+++ b/app/src/pages/integration/styles/MappedLabel.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     width: 45%;
     // height: fit-content;
+    margin-right: 3rem;
 
     button{
         border: none;
